--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,19 @@
     <dependencies>
         <dependency>
             <groupId>org.parboiled</groupId>
-            <artifactId>parboiled_2.10</artifactId>
+            <artifactId>parboiled_2.11</artifactId>
             <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.10</artifactId>
+            <artifactId>scalatest_2.11</artifactId>
             <version>2.2.4</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scalaz</groupId>
+            <artifactId>scalaz-core_2.11</artifactId>
+            <version>7.1.3</version>
         </dependency>
     </dependencies>
 
